--- a/resources/sass/style/mainStyle.css
+++ b/resources/sass/style/mainStyle.css
@@ -44,7 +44,7 @@ body {
 }
 
 .main-container {
-    padding: 100px 0;
+    padding: 50px 0;
 }
 
 .center {
@@ -1544,16 +1544,16 @@ footer img {
 
 
 /* blog-1 */
-.top-bar-blog {
-    color: #333;
-    padding: 150px 0 150px;
-    background: -webkit-linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../images/blog/trash-1.jpg);
-    background: linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../images/blog/trash-1.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center center;
-    text-align: center;
-}
+/*.top-bar-blog {*/
+    /*color: #333;*/
+    /*padding: 150px 0 150px;*/
+    /*background: -webkit-linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../images/blog/trash-1.jpg);*/
+    /*background: linear-gradient( rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(../images/blog/trash-1.jpg);*/
+    /*background-size: cover;*/
+    /*background-attachment: fixed;*/
+    /*background-position: center center;*/
+    /*text-align: center;*/
+/*}*/
 
 .top-bar-blog h1 {
     font-size: 60px;
